# karelrosta

./: CMakeLists.txt  README.md  genalg.cpp  genalg.h  identify.cpp  identify.h  main.cpp  matrix.cpp  matrix.h  new.cpp  new2.cpp  pmfilter.cpp  pmfilter.h
